resym_core/tests/snapshots/type_reconstruction__type_reconstruction_raw_access_specifiers-4.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

union resym_test::UnionTest { /* Size=0x8 */
  /* 0x0000 */ public: unsigned char u1;
  /* 0x0000 */ public: unsigned short u2;
  /* 0x0000 */ public: unsigned long u3;
  /* 0x0000 */ public: unsigned __int64 u4;
  public: static unsigned __int64 su5;
  
  public: UnionTest();
  public: ~UnionTest();
  public: void* GetPtr();
  public: void* ConstMethod() const;
  public: void* VolatileMethod() volatile;
  public: void* ConstVolatileMethod() const volatile;
  public: void (*ReturnFuncPointerMethod())(long);
  public: void* __vecDelDtor(unsigned long);
  
  public: static long Magic();
  public: static long MagicVar1(...);
  public: static long MagicVar2(long, ...);
};

