resym_core/tests/snapshots/type_reconstruction__type_reconstruction_raw_access_specifiers-8.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::StructUnnamedUdtTest1 { /* Size=0xa0 */
  union {
    struct {
      /* 0x0000 */ public: unsigned int i1;
      /* 0x0004 */ public: unsigned int i2;
      union {
        /* 0x0008 */ public: unsigned int i3;
        /* 0x0008 */ public: unsigned int i4;
      };
    };
    /* 0x0000 */ public: unsigned int i5;
    struct {
      /* 0x0000 */ public: unsigned int i21;
      /* 0x0004 */ public: unsigned int i22;
      /* 0x0008 */ public: unsigned int i23;
    };
    /* 0x0000 */ public: resym_test::PrimitiveTypesTest s1;
    /* 0x0000 */ public: unsigned long long int QuadPart;
  };
  /* 0x0070 */ public: unsigned long long int QuadPart2;
  /* 0x0078 */ public: unsigned long long int QuadPart3;
  union {
    /* 0x0080 */ public: unsigned int Reserved;
    struct {
      /* 0x0080 */ public: unsigned char Type;
      /* 0x0081 */ public: unsigned char Reserved1;
      /* 0x0082 */ public: unsigned short Reserved2;
    };
  };
  /* 0x0084 */ public: int i6;
  /* 0x0088 */ public: int i7;
  union {
    /* 0x0090 */ public: void* c1;
    /* 0x0090 */ public: char c2;
  };
  /* 0x0098 */ public: int i8;
  /* 0x009c */ public: int i9;
};
